# algokit_tealish_template

./: .gitignore  README.md  copier.yml
template/: .gitignore  README.md  pyproject.toml
template/tests/: {% if template == 'hello_world' %}test_hello_world.py{% endif %}.jinja
template/utils/: deploy.py
templates/{% if template == 'hello_world' %}hello_world{% endif %}/: pyproject.toml
templates/{% if template == 'hello_world' %}hello_world{% endif %}/contracts/: hello_world.tl
templates/{% if template == 'hello_world' %}hello_world{% endif %}/tests/: test_hello_world.py
